# libxr

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  configure.ac
docs/: Doxyfile
include/: xr-call.h  xr-client.h  xr-http.h  xr-lib.h  xr-server.h  xr-value-utils.h  xr-value.h
lib/: Makefile.am  gasynchelper.c  gio.h  gioenumtypes.c  glibintl.h  gpollableinputstream.c  gpollableoutputstream.c  gsocketinputstream.h  gsocketoutputstream.h  gsourceclosure.c  gsourceclosure.h  gtlsbackend-gnutls.c  gtlsbackend-gnutls.h  gtlsbackend.c  gtlscertificate-gnutls.c  gtlscertificate-gnutls.h  gtlscertificate.c  gtlscertificate.h  gtlsclientconnection-gnutls.c  gtlsclientconnection.c  gtlsclientconnection.h  gtlsconnection-gnutls.c  gtlsconnection-gnutls.h  gtlsconnection.c  gtlsdatabase-gnutls.c  gtlsdatabase.c  gtlsdatabase.h  gtlsfiledatabase-gnutls.c  gtlsfiledatabase.c  gtlsinputstream-gnutls.c  gtlsinputstream-gnutls.h  gtlsinteraction.c  gtlsoutputstream-gnutls.c  gtlsoutputstream-gnutls.h  gtlspassword.c  gtlsserverconnection-gnutls.c  gtlsserverconnection.c  gtlsserverconnection.h  xml-priv.h  xr-call-xml-rpc.c  (+9 more)
pkgconfig/: libxr-uninstalled.pc.in  libxr.pc.in
tests/: .gdbinit  Makefile.am  jobclient.c  jobs.c  jobs.h  run-job-tests.sh  server.c  test.xdl
tests/zblok/: server.c
xdl-compiler/: main.c  parser-lib.c  parser-lib.h  xdl-parser.yre  xdl.c  xdl.h
